Moves ACS back to left in nav bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- Navbar -->
         <nav id="navbar" class="uk-navbar-container uk-margin" uk-navbar>
-            <div class="uk-navbar-center uk-light">
+            <div class="uk-navbar-left uk-light">
         
                 <a class="uk-navbar-item uk-logo" href="#">Abacus Consulting Services</a>
         
@@ -31,7 +31,7 @@
         <div class="people-container">
 
             <!-- Meet the team heading -->
-            <h1 id="meetTheTeam" class="uk-heading-large cover-leader uk-dark uk-text-center">Meet the team!</h1>
+            <h1 id="meetTheTeam" class="uk-heading-large cover-leader uk-dark uk-text-center">Meet the team</h1>
 
             <!-- David -->
             <div class="uk-grid uk-child-width-expand@m" uk-grid>
