Adds Luke's description

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                         <div class="uk-dark uk-container">
                             <p class="name">David</p>
                             <p class="position">Founder</p>
-                            <p class="description">David is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?</p>
+                            <p class="description">
+                                David is Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus exercitationem porro dolores deleniti eum minima distinctio nostrum qui eaque rerum animi, laborum doloribus veritatis non cupiditate rem quisquam quae necessitatibus.
+                                <br><br>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque dignissimos, eveniet laboriosam similique non minus exercitationem cum quas, eaque harum, ratione dolore! Eligendi repudiandae itaque possimus numquam vitae laboriosam eaque.
+                            </p>
                             <ul class="uk-list contact-list">
                                 <li><span uk-icon="icon: receiver"></span>(979) 492-????</li>
                                 <li><span uk-icon="icon: mail"></span>david@abacus-????????.com</li>
@@ -57,7 +61,15 @@
                     <div class="uk-container cover-leader">
                         <p class="name uk-text-right">Luke</p>
                         <p class="position uk-text-right">Contractor</p>
-                        <p class="description uk-text-left">Luke is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?</p>
+                        <p class="description uk-text-left">
+                            Luke is a Software Engineering student at UT Arlington. He likes to build things and work with people. He's worked at Abacus for 6 years now,
+                            and has created software solutions for many different people, from charities to basketball teams. Now, he's looking for fresh problems to tackle
+                            and new learning opportunities, all while finishing his undergraduate degree.
+                            <br><br>
+                            Luke has some experience with web designing (he built this site), but feels most at home with process control software. His big personal project is 
+                            a brewery control system.
+                            <br><br>
+                        </p>
                         <ul class="uk-list uk-text-right contact-list">
                             <li>(979) 383-???<span uk-icon="icon: receiver"></span></li>
                             <li>luke@abacus-???????.com<span uk-icon="icon: mail"></span></li>
