Some big ole changes

--- a/index.html
+++ b/index.html
@@ -34,31 +34,30 @@
             <h1 id="meetTheTeam" class="uk-heading-large cover-leader uk-dark uk-text-center">Meet the team</h1>
 
             <!-- David -->
-            <div class="uk-grid uk-child-width-expand@m" uk-grid>
-                <div class="uk-width-2-5@m uk-visible@m uk-height-large uk-background-cover uk-light uk-flex personnel-image curve-bottom-right" uk-parallax="bgy: 100" style="background-image: url('images/david1.jpg');"></div>
-                <div>
-                    <div class="cover-leader">
-                        <div class="uk-dark uk-container">
-                            <p class="name">David</p>
-                            <p class="position">Founder</p>
-                            <p class="description">
-                                David is Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus exercitationem porro dolores deleniti eum minima distinctio nostrum qui eaque rerum animi, laborum doloribus veritatis non cupiditate rem quisquam quae necessitatibus.
-                                <br><br>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque dignissimos, eveniet laboriosam similique non minus exercitationem cum quas, eaque harum, ratione dolore! Eligendi repudiandae itaque possimus numquam vitae laboriosam eaque.
-                            </p>
-                            <ul class="uk-list contact-list">
-                                <li><span uk-icon="icon: receiver"></span>(979) 492-????</li>
-                                <li><span uk-icon="icon: mail"></span>david@abacus-????????.com</li>
-                            </ul>
-                        </div>
+            <div class="uk-grid uk-child-width-expand" uk-grid>
+                <div class="uk-width-2-5 uk-background-cover uk-height-match curve-bottom-right" uk-parallax="bgy: -100" style="background-image: url('images/david1.jpg');"></div>
+                <div class="uk-width-2-5">
+                    <div class="uk-container personnel-info-left">
+                        <p class="name">David</p>
+                        <p class="position">Founder</p>
+                        <p class="description">
+                            David is Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus exercitationem porro dolores deleniti eum minima distinctio nostrum qui eaque rerum animi, laborum doloribus veritatis non cupiditate rem quisquam quae necessitatibus.
+                            <br><br>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque dignissimos, eveniet laboriosam similique non minus exercitationem cum quas, eaque harum, ratione dolore! Eligendi repudiandae itaque possimus numquam vitae laboriosam eaque.
+                        </p>
+                        <ul class="uk-list contact-list">
+                            <li><span uk-icon="icon: receiver"></span>(979) 492-????</li>
+                            <li><span uk-icon="icon: mail"></span>david@abacus-????????.com</li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
             <!-- Luke -->
-            <div class="uk-grid uk-child-width-expand@m" uk-grid>
-                <div>
-                    <div class="uk-container cover-leader">
+            <div class="uk-grid uk-child-width-expand" uk-grid>
+                <div class="uk-width-1-5"></div>
+                <div class="uk-width-2-5">
+                    <div class="uk-container personnel-info-right">
                         <p class="name uk-text-right">Luke</p>
                         <p class="position uk-text-right">Contractor</p>
                         <p class="description uk-text-left">
@@ -76,18 +75,23 @@
                         </ul>
                     </div>
                 </div>
-                <div class="uk-width-2-5@m uk-visible@m uk-height-large uk-background-cover uk-light uk-flex personnel-image curve-bottom-left" uk-parallax="bgy: 100" style="background-image: url('images/luke1.jpg');"></div>
+                <div class="uk-width-2-5 uk-height-match uk-background-cover curve-bottom-left" uk-parallax="bgy: -100" style="background-image: url('images/luke1.jpg');"></div>
             </div>
 
 
             <!-- Gart -->
-            <div class="uk-grid uk-child-width-expand@m" uk-grid>
-                <div class="uk-width-2-5@m uk-visible@m uk-height-large uk-background-cover uk-light uk-flex personnel-image curve-bottom-right" uk-parallax="bgy: 100" style="background-image: url('images/gart1.jpg');"></div>
-                <div>
-                    <div class="uk-container cover-leader">
+            <div class="uk-grid uk-child-width-expand" uk-grid>
+                <div class="uk-width-2-5 uk-background-cover uk-height-match curve-bottom-right" uk-parallax="bgy: -100" style="background-image: url('images/gart1.jpg');"></div>
+                <div class="uk-width-2-5">
+                    <div class="uk-container personnel-info-left">
                         <p class="name">Garret</p>
                         <p class="position">Contractor</p>
-                        <p class="description">Garret is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?</p>
+                        <p class="description">
+                            Garret is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?
+                        </p>
+                        <p class="description">
+                            Garret is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?
+                        </p>
                         <ul class="uk-list contact-list">
                             <li><span uk-icon="icon: receiver"></span>(###) ###-####</li>
                             <li><span uk-icon="icon: mail"></span>garret@abacus-????????.com</li>
