Yet more big changes, lest the site goes unchanged

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="uk-grid uk-child-width-expand" uk-grid>
                 <div class="uk-width-2-5 uk-background-cover uk-height-match curve-bottom-right" uk-parallax="bgy: -100" style="background-image: url('images/david1.jpg');"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container personnel-info-left">
+                    <div class="uk-container personnel-info">
                         <p class="name">David</p>
                         <p class="position">Founder</p>
                         <p class="description">
@@ -57,7 +57,7 @@
             <div class="uk-grid uk-child-width-expand" uk-grid>
                 <div class="uk-width-1-5"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container personnel-info-right">
+                    <div class="uk-container personnel-info">
                         <p class="name uk-text-right">Luke</p>
                         <p class="position uk-text-right">Contractor</p>
                         <p class="description uk-text-left">
@@ -83,7 +83,7 @@
             <div class="uk-grid uk-child-width-expand" uk-grid>
                 <div class="uk-width-2-5 uk-background-cover uk-height-match curve-bottom-right" uk-parallax="bgy: -100" style="background-image: url('images/gart1.jpg');"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container personnel-info-left">
+                    <div class="uk-container personnel-info">
                         <p class="name">Garret</p>
                         <p class="position">Contractor</p>
                         <p class="description">
