Few more changes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
             </div>
         </nav>
 
+        
+        <div id="abacusImage" class="uk-text-center cover-stripe">
+            <img src="images/abacus.jpg" width="55px" alt="">
+        </div>
+
         <div class="uk-section">
-            <div class="uk-container">
-                <h1 id="abacusTitle" class="uk-heading-medium cover-stripe uk-text-center">Abacus Consulting Services</h1>
-                    <p id="abacusDescription" class="cover-stripe">
-                        was founded in 20XX by David Sweeney, a long time IT professional. It blah blah blah, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla numquam culpa facere, nisi perferendis nesciunt corporis quod perspiciatis ad, voluptatum magnam vel ratione totam dolore non. Deleniti ipsum consectetur saepe.
-                    </p>
+            <div class="uk-container title-container green-border cover-stripe">
+                <h1 id="abacusTitle" class="uk-heading-medium uk-text-center">Abacus</h1>
+                <h2 id="abacusTitleSecondary" class="uk-heading-small uk-text-center">Consulting Services</h2>
+                <p id="abacusDescription">
+                    was founded in 20XX by David Sweeney, a long time IT professional. Abacus (and David) are based in Millican, Texas.
+                </p>
+                <p id="abacusDescription">
+                    The Abacus team is committed to creating and maintaining custom software solutions. Give us a call, lets talk about your next project.
+                </p>
                 </div>
             </div>
         </div>
@@ -29,13 +38,13 @@
         <div>
 
             <!-- Meet the team heading -->
-            <h1 id="meetTheTeam" class="uk-heading-medium cover-stripe uk-dark uk-text-center">Meet the team</h1>
+            <!-- <h1 id="meetTheTeam" class="uk-heading-medium cover-stripe uk-dark uk-text-center">Meet the team</h1> -->
 
             <!-- David -->
             <div class="uk-grid uk-child-width-expand" uk-grid>
-                <div class="uk-width-2-5 personnel-image uk-background-cover uk-height-match image-radius" uk-parallax="bgy: -100" style="background-image: url('images/david1.jpg');"></div>
+                <div class="uk-width-2-5 personnel-image uk-background-cover uk-height-match image-radius" uk-parallax="bgy: -100" style="background-image: url('images/david2.jpg');"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container cover-stripe personnel-info">
+                    <div class="uk-container cover-stripe personnel-info green-border">
                         <p class="name">David</p>
                         <p class="position">Founder</p>
                         <p class="description">
@@ -58,21 +67,28 @@
             <div class="uk-grid uk-child-width-expand" uk-grid>
                 <div class="uk-width-1-5"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container cover-stripe personnel-info">
+                    <div class="uk-container cover-stripe personnel-info green-border">
                         <p class="name uk-text-right">Luke</p>
                         <p class="position uk-text-right">Contractor</p>
                         <p class="uk-text-left">
-                            Luke is a Software Engineering student at the University of Texas at Arlington. He likes to build things and work with people. He's worked at Abacus for 6 years now,
-                            and has created software solutions for many different people, from charities to basketball teams. Now, he's looking for fresh problems to tackle
-                            and new learning opportunities, all while finishing his undergraduate degree.
+                            Luke is a Software Engineering student at the University of Texas at Arlington. He likes to design things and work with people.
+                            He's worked at Abacus for 6 years now, and has created software solutions for many different people, from charities to basketball teams.
+                            Now, he's looking for fresh problems to tackle and new learning opportunities, all while finishing his undergraduate degree.
                             <br><br>
-                            Luke has some experience with web designing (he built this site), but feels most at home with process control software. His big personal project is 
-                            a brewery control system.
-                            <br><br>
+                            Luke has experience with web design (he built this site) and is capable of designing and creating custom software solutions to fit anyone's needs.
+                            He's a jack of all trades, master of a few. 
+                            
+                            <p class="position">Specialties</p>
+                            <ul class="uk-list uk-list-hyphen">
+                                <li>Software Planning</li>
+                                <li>Site and Content Management</li>
+                                <li>Communication Infrastructure</li>
+                                <li>Personnel Training</li>
+                            </ul>
                         </p>
                         <ul class="uk-list uk-text-right contact-list">
-                            <li>(979) 383-???<span uk-icon="icon: receiver"></span></li>
-                            <li>luke@abacus-???????.com<span uk-icon="icon: mail"></span></li>
+                            <li>(979) 383-9991<span uk-icon="icon: receiver"></span></li>
+                            <li>luke@abacus-consultants.com<span uk-icon="icon: mail"></span></li>
                             <li>
                                 <a href="https://github.com/llamicron">Github</a><span uk-icon="icon: github"></span>
                             </li>
@@ -87,18 +103,18 @@
             <div class="uk-grid uk-child-width-expand" uk-grid>
                 <div class="uk-width-2-5 uk-background-cover personnel-image uk-height-match image-radius" uk-parallax="bgy: -100" style="background-image: url('images/gart1.jpg');"></div>
                 <div class="uk-width-2-5">
-                    <div class="uk-container cover-stripe personnel-info">
-                        <p class="name">Garret</p>
+                    <div class="uk-container cover-stripe personnel-info green-border">
+                        <p class="name">Adrian</p>
                         <p class="position">Contractor</p>
                         <p class="description">
-                            Garret is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?
+                            Adrian is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?
                         </p>
                         <p class="description">
                             Garret is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quis saepe rem quasi, non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto? non natus dignissimos ad ratione veritatis cumque, iusto, molestias accusamus nihil maxime optio neque ut. Repellat, architecto?
                         </p>
                         <ul class="uk-list contact-list">
                             <li><span uk-icon="icon: receiver"></span>(###) ###-####</li>
-                            <li><span uk-icon="icon: mail"></span>garret@abacus-????????.com</li>
+                            <li><span uk-icon="icon: mail"></span>adrian@abacus-????????.com</li>
                         </ul>
                     </div>
                 </div>
